Inventory refactoring: fixed toggle icon styling. Now job events and inventory group trees use .node-toggle to style collapse/expand icon. Fixed regex issue in Children helper.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -1003,8 +1003,13 @@ input[type="checkbox"].checkbox-no-label {
   font-weight: bold;  
 }
 
-.inv-group-toggle {
-  margin-right: 3px;  
+.node-toggle {
+  /* also used on job evetns */
+  float: none;
+  padding-top: 3px;
+  padding-left: 0;
+  margin-right: 5px;
+  margin-left: 0;
 }
 
 .disabled {
@@ -1061,14 +1066,6 @@ a.btn-disabled:hover {
 }
 
 /* job_events syles */
-
-#jobevents_table tr td i {
-  float: none;
-  padding-top: 3px;
-  padding-left: 0;
-  margin-right: 5px;
-  margin-left: 0;
-}
 
 #jobevents_table .actions i {
   padding-top: 0;
